link the models

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -101,7 +101,7 @@
         <!-- Input Section -->
         <div class="input-box">
           <div class="dialect-toggle">
-            <button class="dialect-btn active" id="dialect-btn-msa" data-dialect="msa">العربية الفصحى</button>
+            <button class="dialect-btn active" id="dialect-btn-msa" data-dialect="arabic">العربية الفصحى</button>
             <button class="dialect-btn" id="dialect-btn-darija" data-dialect="darija">اللهجة الجزائرية</button>
           </div>
           
